--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: Yash Yennam
+logo: /assets/img/1635938374586.jpg
+description: Yash Yennam is Machine Learning Engineer at a Fintech with experince in Investment Bank.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
