--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,33 @@
-title: Yash Yennam
+title: <p align="center"> Yash Yennam </p>
 logo: /assets/img/1635938374586.jpg
-description: Yash Yennam is Machine Learning Engineer at a Fintech with experince in Investment Bank.
+description: <p align="center">
+             <a href="https://www.linkedin.com/in/yash-yennam/">LinkedIn</a> |
+             <a href="https://github.com/yashyennam/">GitHub</a>
+             <br>
+             Yash Yennam is Machine Learning Engineer at a Fintech with experince in Investment Bank.</br>
+              </p>
 show_downloads: true
 google_analytics:
+theme: jekyll-theme-minimal
+
+
+# title: <p align="center"> Sajan Kedia </p>
+# logo: /assets/img/logo.png
+
+# description:
+#   <p align="center">
+#   <a href="pdf/resume.pdf">Resume</a> |
+#   <a href="https://www.linkedin.com/in/sajan-kedia-b06a6821/">LinkedIn</a> |
+#   <a href="https://github.com/sajankedia">GitHub</a>
+  
+#   <br>   
+#   I'm working on Data Science, Big Data, Spark, Machine learning & NLP related problems.
+#   Also handing the Big Data from real-time Ad call data.
+#   Worked with IBM Research at Big Data Analytics team.
+#   Working in AdTech domain for 3 years.
+#   <br>
+#   </p>
+
+
+
 theme: jekyll-theme-minimal
